# gameformykids

./: .gitignore  CMakeLists.txt  README.md  Terrain.cpp  Terrain.h  add.cpp  camera.h  glad.c  main.cpp  settings.txt  shader.fs  shader.vs
resources/map/: doodads.txt  terrain_height.txt
resources/objects/animals/wolf/: wolf0013.mtl
resources/objects/animals/wolf2/: Readme.txt  Wolf_One_obj.mtl
resources/objects/grass6/: grass.mtl
resources/objects/pinetree/: pinetree.mtl
shaders/: terrainShader.fs
src/: compile_commands.json  data_dir.h.in  main.cpp
src/audio/: SoundManager.cpp  SoundManager.h
src/camera/: camera.h
src/fps/: Fps.cpp  Fps.h
src/gameedit/: SceneModifier.cpp  SceneModifier.h
src/images/: Image.cpp  Image.h
src/menu/: Menu.cpp  Menu.h
src/models/: AbstractModel.cpp  AbstractModel.h  AnimatedModel.cpp  AnimatedModel.h  BoneInformation.cpp  BoneInformation.h  EntityRenderer.cpp  EntityRenderer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelGenerator.cpp  ModelGenerator.h  ModelRenderer.cpp  ModelRenderer.h  ModelsHolder.cpp  ModelsHolder.h  StaticModel.h  StaticShape.cpp  StaticShape.h  StaticShapeRenderer.cpp  StaticShapeRenderer.h  VertexBoneData.cpp  VertexBoneData.h
src/objects/: Entity.cpp  Entity.h  Player.cpp  Player.h
src/objects/movers/: Intersection.h  MeshIntersecter.cpp  MeshIntersecter.h  NoDuplicatesAdapter.h  PathPlayerMover.cpp  PathPlayerMover.h  RandomPlayerMover.cpp  RandomPlayerMover.h
src/pathing/: Path.cpp  Path.h  SvgDElementPathParser.h
src/shaders/: shader.h
src/shaders/files/: modelShader.fs  multiInstanceShader.vs  singleInstanceShader.vs  skyboxShader.vs  staticShader.fs  staticShader.vs  terrainShader.fs  terrainShader.vs
src/skybox/: Skybox.cpp  Skybox.h  SkyboxRenderer.cpp  SkyboxRenderer.h
src/storage/: LocalStorage.cpp  LocalStorage.h
src/terrain/: DoodadsLoader.cpp  DoodadsLoader.h  EntitiesHolder.h  Grasses.cpp  Grasses.h  Terrain.cpp  Terrain.h  TerrainHeight.cpp  TerrainHeight.h  TerrainRenderer.cpp  TerrainRenderer.h
src/text/: Character.h  TextProportion.cpp  TextProportion.h  TextRenderer.cpp  TextRenderer.h  TextToBeRendered.h
src/textures/: TextureLoader.h
src/tracing/: Tracer.h
src/ui/: Element.cpp  Element.h  Screen.h  UiRenderer.cpp  UiRenderer.h
src/utils/: GameState.cpp  GameState.h  Log.cpp  Log.h  OpenGlErrorChecker.h  lerp.h
